--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=waa
 
 # Database URL
-spring.datasource.url=jdbc:postgresql://localhost:5432/waa
+spring.datasource.url=jdbc:postgresql://localhost:5432/waa-homework
 
 # Username and password
 spring.datasource.username=postgres
@@ -9,4 +9,4 @@ spring.datasource.password=postgres
 
 # Hibernate properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
