--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=waa
+
+# Database URL
+spring.datasource.url=jdbc:postgresql://localhost:5432/waa-homework
+
+# Username and password
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+# Hibernate properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
